--- a/public/app/static/styles.css
+++ b/public/app/static/styles.css
@@ -227,3 +227,7 @@ dashboard-text:hover{
 	color: #a8738a;
 	cursor: pointer;
 }
+
+@import url(https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200..1000;1,200..1000&display=swap);
+@import url(https://fonts.googleapis.com);
+@import url(https://fonts.gstatic.com);
