--- a/public/app/static/styles.css
+++ b/public/app/static/styles.css
@@ -231,3 +231,4 @@ dashboard-text:hover{
 @import url(https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200..1000;1,200..1000&display=swap);
 @import url(https://fonts.googleapis.com);
 @import url(https://fonts.gstatic.com);
+@import url(tps://fonts.googleapis.com/css?family=Roboto);
