--- a/public/app/static/styles.css
+++ b/public/app/static/styles.css
@@ -15,15 +15,23 @@
 		font-size: 16px;
 	}
 }
-
+.top-icon{
+	position: absolute;
+	top: 80px;
+	right: 20px;
+	display: inline-block;
+	align-items: center;
+}
 :root{
-	--primary-color: #a8378a;
+	--primary-color: #a8738a;
 	--secondary-color: #202120;
 	--font-size: 14px;
 }
 body{
 	font-size: var(--font-size);
-	color: var(--secondary-color)
+	color: var(--secondary-color);
+	height: 100vh;
+	position: relative;
 }
 nav{
 	display: flex;
@@ -31,6 +39,7 @@ nav{
 	padding: 0;
 	margin-left: 5px;
 	justify-content: center;
+	
 }
 button{
 	background-color: #e1ebe4;
@@ -66,27 +75,37 @@ button:hover{
 	width: 50px;
 	height: 50px;
 	margin: 10px;
-	display: flex;
+	display: inline-block;
 	justify-content: center;
 	align-items: center;
 }
-
+logo{
+	vertical-align: middle;
+	position:absolute;
+	margin-top: 0px;
+	margin-bottom: 0px;
+	white-space: inherit;
+	display:inline-block;
+}
+footer div, footer span {
+	margin: 0;
+	padding: 0;
+}
 .auth-buttons{
 	display: inline-block;
 	vertical-align: middle;
-	margin: 0 10px;
+	margin: 30px;
 	text-align: center;
 	text-decoration: none;
 	cursor: pointer;
-	color: #a8378a;
+	color: #a8738a;
 }
 footer{
 	text-align: center;
 	cursor: pointer;
 	font-size: 14px;
-	position: relative;
-	align-items: center;
 	font-weight: 900;
+	max-height: 100px;
 }
 .auth-buttons a {
 	text-decoration: none;
@@ -107,6 +126,7 @@ footer{
 		max-width: 195px;
 		
 	}
+	
 	#choose-file:hover{
 		background: linear-gradient(to bottom, #F5F5DC 0%, #F5F5DC 100%);
 		cursor: pointer;
@@ -116,31 +136,71 @@ footer{
 	input #choose-file{
 		font-family: 'Nunito', sans-serif';
 	}
-	.filter-item {
-		border: 1px solid #ccc;
-		margin-bottom: 10px;
-		padding: 10px;
-  }
 
+#registration:hover, #login:hover{
+	cursor: pointer;
+}
+#loginForm{
+	display:block;
+	max-width: 500px;
+	justify-self: center;
+}
+section.registration{
+	display:block;
+	max-width: 500px;
+	
+}
+.checkmark{
+color:#a8738a; font-size: 16px; margin-left:10px; vertical-align: middle;
+}
+
+.register{max-width: 550px; justify-self: center; top:2px;}
+#register{
+	cursor: pointer; text-align: center;  position:absolute; color:#a8738a; font-weight: 1rem; margin: auto; top: 165px;;
+}
+#login{
+	cursor: pointer; text-align: center;  position:absolute; color:#a8738a; font-weight: 1rem; margin: auto;  font-size: 14px;
+}
   .filter-item h2 {
 		display: flex;
 		justify-content: space-between;
 		cursor: pointer;
 		padding: 10px;
-		background-color: #f1f1f1;
+		color: rgba(107, 135, 35, 0.5);
+		background-color: rgba(209, 214, 191, 0.089); 
+		transform: 0.3s ease;
   }
+  .filter-item h2:hover{
+		color:#a8738a;
+  }
+  h1{
+	font-size: 26px;
+	color: #a8738a;
+	cursor: pointer;
+	position: inherit;
+	margin-top: 0;
+	padding: 0;
+	top: -12px;
+  }
+  #login:hover{ cursor: pointer; font-size: 17px; text-decoration: underline;}
+  #login{top: -15px; font-size: 14px;color:#a8738a; text-decoration: none; transition: 0.3s ease; text-align: center; position:sticky}
 
-  .filter-item section {
-		display: none; 
-		padding: 10px;
+  .filter-item  {
+		transform: max-height 0.3ease;
+		border: 1px solid white;
+		padding: 5px;
+		margin-bottom: 1px;
+		vertical-align: middle;
   }
+  .active.filter-item{display:block;}
   .filter-item:hover{
 	cursor: pointer;
   }
   .arrow {
+		display:inline-block;
 		transition: transform 0.3s ease;
   }
-
+.rotate{transform: rotate(90deg);}
   .arrow.open {
 		transform: rotate(90deg); 
   }
@@ -185,45 +245,62 @@ form input:focus, form textarea:focus, form button:focus {
 	font-weight: bold;
 	cursor: pointer;
 	vertical-align: middle;
-	margin:0;
-	top: 235px;
+	top: 245px;
 	text-align: center;
 	transition:color 0.3s ease;
-	padding: 0px;
+	padding: 5px;
+	margin-top:2%;
 }
 .icon-label:hover {
 	color: #a8738a;
 	font-weight: var(icon-label);
 }
-.icon-container .dashboard-icons {
-	display: inline-flex;
-	align-items: center;
-	justify-content: space-around;
-	overflow-x:auto;
-	white-space: nowrap;
-	gap: 0px;
-	margin: 0px;
-	width:fit-content
-}
 
+.icon-container {
+	margin-top: 100px;
+	display:-webkit-inline-flex;
+	position:absolute;
+	gap: 20px;
+	justify-content: center;
+	max-width: 700px;
+	
+}
+img, p, h1, h2, h3, span {
+	margin: 0;
+	padding: 0;
+}
 .icon-item {
 	text-align: center;
 	margin: 0;
 	width: 50px;
 	height: auto;
 }
-.icon-row{
-	justify-content: space-around;
-	width: auto;
-}
 p#icon-label{
-	margin-top: -10px;
 	padding: 0px;
 	display: flex;
-	position: static;
+	position: -webkit-sticky;
+	text-align: center;
+	justify-content: center;
+	font-size: 14px;
 }
 
-dashboard-text:hover{
+ p#icon-label:hover{
 	color: #a8738a;
 	cursor: pointer;
+	text-decoration: underline;
+}
+#dashboard-text:hover{
+	cursor: pointer;
+}
+.filter-section{
+	vertical-align: middle;
+	max-width: 600px; 
+	align-self: center;
+	margin: 0 auto;
+	display:flex;
+	flex-direction: column;
+}
+.filter-container{
+	overflow:hidden;
+	transition: height 0.3s ease;
 }
