--- a/src/static/styles.css
+++ b/src/static/styles.css
@@ -111,6 +111,7 @@ footer{
 	font-size: 14px;
 	font-weight: 900;
 	max-height: 100px;
+	font-family: 'Nunito', sans-serif;
 }
 div.sources-container{
 	max-width: 600px;
