--- a/src/static/styles.css
+++ b/src/static/styles.css
@@ -15,6 +15,14 @@
 		font-size: 16px;
 	}
 }
+
+
+
+button[id=dashboardSubmit],
+button[id="dashboardSubmit1"],
+button[id="dashboardSubmit2"] {text-align: center;
+}
+
 .top-icon{
 	position: absolute;
 	top: 80px;
@@ -234,19 +242,7 @@ color:#a8738a; font-size: 16px; margin-left:10px; vertical-align: middle;
   #login:hover{ cursor: pointer; font-size: 17px; text-decoration: underline;}
   #login{top: -15px; font-size: 14px;color:#a8738a; text-decoration: none; transition: 0.3s ease; text-align: center; position:sticky}
 
-  .filter-item  {
-		transform: max-height 0.3ease;
-		border: 1px solid white;
-		padding: 5px;
-		margin-bottom: 1px;
-		vertical-align: middle;
-		max-height: 70vh;
-		overflow-y: auto;
-		overflow-x: hidden;
-		width: 600px;
-		justify-self: center;
-  }
-  .active.filter-item{display:block;}
+
   .filter-item:hover{
 	cursor: pointer;
 	overflow-y:show;
@@ -260,12 +256,16 @@ color:#a8738a; font-size: 16px; margin-left:10px; vertical-align: middle;
 		transform: rotate(90deg); 
   }
   form input, form textarea, form button {
-	width: 100%; 
+	width: 600px; 
 	padding: 10px;
 	margin-bottom: 10px; 
 	border: 1px solid #ccc;
 	border-radius: 4px;
-	box-sizing: border-box; /
+	box-sizing: border-box; 
+	align-items: center;
+	margin: 2px;
+	display:inline-table;
+	
 }
 
 form textarea {
@@ -276,7 +276,11 @@ form button {
 	background-color: #f1f1f1;
 	border: none;
 	cursor: pointer;
-	padding: 10px;
+	padding: 5px;
+	width: 200px;
+	margin:0 auto;
+	display: grid;
+	margin-left: 150px;
 }
 
 input[type="file"] {
@@ -288,18 +292,49 @@ form input:focus, form textarea:focus, form button:focus {
 	outline: none;
 	border-color: #888; 
 }
-
-.filter-item-section {
-	background-color: #f1f1f1;
-	padding: 20px;
-	border-radius: 5px;
-	transition: transform 0.3s ease;
-	height: 100vh;
-	overflow:hidden;
-	align-items:enter;
-	display:flex;
+.form-container {
+	margin-top: 10px; /* Adjust if needed */
+	transition: all 0.3s ease; /* Smooth transition */
 }
-.icon-label{
+#recurringTextarea {
+	display:none;
+	margin-top: 10px;
+}
+#recurringTextarea1{
+	margin-top: 2px;
+	max-width: 70%;
+	cursor: pointer;
+}
+input[type="text"],
+input[type="email"],
+input[type="date"],
+input[type="time"],
+input[type="number"],
+input[type="details"]
+textarea,
+dropdown,
+select {
+   max-width: 70%;
+	padding: 10px;
+	margin-top: 2px;
+   margin-bottom: 2px;
+}
+section[id=custom-request],
+section[id=partnership],
+section[id=book-session],
+section[id=message]{
+	width: 700px;
+	margin-left: 175px;
+	position:absolute;
+	cursor: pointer;
+	padding:0px;
+
+
+}
+
+
+
+.icon-label, .iconlabel1, .iconlabel2{
 	font-family: 'Nunito', sans-serif;
 	font-weight: bold;
 	cursor: pointer;
@@ -402,11 +437,11 @@ span.bold{
 	cursor: pointer;
 }
 .filter-section{
-	vertical-align: middle;
-	max-width: 600px; 
+	vertical-align: center;
+	max-width: 650px; 
 	align-self: center;
 	margin: 0 auto;
-	display:flex;
+	display:inline-block;
 	flex-direction: column;
 }
 .filter-container{
