--- a/src/static/pages/logout.ejs
+++ b/src/static/pages/logout.ejs
@@ -22,7 +22,7 @@
    </div>
    <script src="/src/index.mjs"></script>
    <footer><hr>
-      <div style="display: inline; margin-top: 0px; text-decoration: none;"  class="auth-buttons"><a href="/src\static\pages\login.ejs">Login</a> | <a href="/src\static\pages\register.ejs">Register</a> | <a href="/src\static\pages\contact.php">Contact</a> | <a href="/src\static\pages\cart.php">Cart</a></div>
+      <div style="display: inline; margin-top: 0px; text-decoration: none;"  class="auth-buttons"><a href="/src\static\pages\login.ejs">Login</a> | <a href="/src\static\pages\register.ejs">Register</a> | <a href="/src\static\pages\contact.html">Contact</a> | <a href="/src\static\pages\cart.html">Cart</a></div>
       <br>
          <div class="ref-buttons">
             <a style="font-size: 12px; text-decoration: none; color:#aaafb2;" href="/src\static\pages\termsandconditions.html">Terms and Conditions</a> |
