--- a/src/static/styles.css
+++ b/src/static/styles.css
@@ -1,17 +1,19 @@
-*{
+* {
 	margin: 0;
 	padding: 0;
-	box-sizing:border-box;
+	box-sizing: border-box;
 	scroll-behavior: smooth;
 	font-family: 'Nunito', sans-serif;
 }
-@media (max-width: 600px){
+
+@media (max-width: 600px) {
 	body {
 		font-size: 12px;
 	}
 }
-@media (min-width: 1024px){
-	body{
+
+@media (min-width: 1024px) {
+	body {
 		font-size: 16px;
 	}
 }
@@ -19,66 +21,77 @@
 
 button[id=dashboardSubmit],
 button[id="dashboardSubmit1"],
-button[id="dashboardSubmit2"] {text-align: center;
+button[id="dashboardSubmit2"] {
+	text-align: center;
 }
 
-.top-icon{
+.top-icon {
 	position: absolute;
 	top: 80px;
 	right: 20px;
 	display: inline-block;
 	align-items: center;
 }
-:root{
+
+:root {
 	--primary-color: #a8738a;
 	--secondary-color: #202120;
 	--font-size: 14px;
 }
-body{
+
+body {
 	font-size: var(--font-size);
 	color: var(--secondary-color);
 	height: 100vh;
 	position: relative;
-	overflow-y:auto;
+	overflow-y: auto;
 }
-nav{
+
+nav {
 	display: flex;
 	align-items: center;
 	padding: 0;
 	margin-left: 5px;
 	justify-content: center;
-	
+
 }
-button{
+
+button {
 	background-color: #e1ebe4;
 	border: none;
 	padding: 3px;
 	cursor: pointer;
 	transition: background-color 0.3s ease;
 }
-button:hover{
+
+button:hover {
 	background: linear-gradient(to bottom, #F5F5DC 0%, #F5F5DC 100%);
 	cursor: pointer;
 	color: black;
 }
-@keyframes fadeIn{
+
+@keyframes fadeIn {
 	from {
 		opacity: 0;
 	}
+
 	to {
 		opacity: 1;
 	}
 }
-.element{
+
+.element {
 	animation: fadeIn 2s ease-in;
 }
-.header{
+
+.header {
 	position: fixed;
 	top: 0;
 	z-index: 100;
 	width: 100%;
 }
-.icon{
+
+.icon {
 	flex: 0 0 auto;
 	width: 50px;
 	height: 50px;
@@ -87,19 +100,23 @@ button:hover{
 	justify-content: center;
 	align-items: center;
 }
-logo{
+
+logo {
 	vertical-align: middle;
-	position:absolute;
+	position: absolute;
 	margin-top: 0px;
 	margin-bottom: 0px;
 	white-space: inherit;
-	display:inline-block;
+	display: inline-block;
 }
-footer div, footer span {
+
+footer div,
+footer span {
 	margin: 0;
 	padding: 0;
 }
-.auth-buttons{
+
+.auth-buttons {
 	display: inline-block;
 	vertical-align: middle;
 	margin: 30px;
@@ -108,11 +125,12 @@ footer div, footer span {
 	cursor: pointer;
 	color: #a8738a;
 }
-a.accessibility-link:hover{
-	color:olivedrab;
+
+a.accessibility-link:hover {
+	color: olivedrab;
 }
 
-footer{
+footer {
 	text-align: center;
 	cursor: pointer;
 	font-size: 14px;
@@ -120,64 +138,77 @@ footer{
 	max-height: 100px;
 	font-family: 'Nunito', sans-serif;
 }
-div.sources-container{
+
+div.sources-container {
 	max-width: 600px;
 	justify-items: center;
 	vertical-align: middle;
 	align-items: center;
-	margin:0 auto;
+	margin: 0 auto;
 }
 
 .auth-buttons a {
 	text-decoration: none;
 	color: #a8738a;
 	cursor: pointer;
-	font-weight:900;
+	font-weight: 900;
 	font-size: 16px;
 	vertical-align: middlle;
 	display: inlin-block;
 	padding: 10px;
 }
-#choose-file{
-		background-color: #e1ebe4;
-		border: none;
-		padding: 5px;
-		cursor: pointer;
-		transition: background-color 0.3s ease;
-		max-width: 195px;
-		
-	}
-	
-	#choose-file:hover{
-		background: linear-gradient(to bottom, #F5F5DC 0%, #F5F5DC 100%);
-		cursor: pointer;
-		color: black;
-	}
 
-	input #choose-file{
-		font-family: 'Nunito', sans-serif';
-	}
+#choose-file {
+	background-color: #e1ebe4;
+	border: none;
+	padding: 5px;
+	cursor: pointer;
+	transition: background-color 0.3s ease;
+	max-width: 195px;
+	font-size: 12px;
 
-#registration:hover, #login:hover{
+}
+
+#choose-file:hover {
+	background: linear-gradient(to bottom, #F5F5DC 0%, #F5F5DC 100%);
+	cursor: pointer;
+	color: black;
+}
+
+input #choose-file {
+	font-family: 'Nunito', sans-serif';
+
+}
+
+#registration:hover,
+#login:hover {
 	cursor: pointer;
 }
-#loginForm{
-	display:block;
+
+#loginForm {
+	display: block;
 	max-width: 500px;
 	justify-self: center;
 }
-#contactForm{
-	width: 400px;display:block;justify-self: center; cursor: pointer; border: none;
+
+#contactForm {
+	width: 400px;
+	display: block;
+	justify-self: center;
+	cursor: pointer;
+	border: none;
 }
-section.registration{
-	display:block;
+
+section.registration {
+	display: block;
 	max-width: 500px;
-	
+
 }
-select{
+
+select {
 	cursor: pointer;
 	width: 400px;
-	justify-self:center;
+	justify-self: center;
 	height: 40px;
 	background-color: none;
 	border: 1px solid #ccc;
@@ -185,51 +216,79 @@ select{
 	text-align: left;
 	margin-bottom: 10px;
 	color: grey;
-	-webkit-appearance:none;
+	-webkit-appearance: none;
 	-moz-appearane: none;
 	appearance: none;
 	color: grey;
 	padding: 10px;
-	
+
 }
+
 select option {
 	cursor: pointer;
-	color:grey;
+	color: grey;
 	text-align: justify;
 	background-color: white;
 }
-select:hover, select:focus{
+
+select:hover,
+select:focus {
 	box-shadow: 2px 2px 5px rgba(209, 224, 191, 0.8);
 	cursor: pointer;
-	outline:none;
+	outline: none;
 }
 
-.checkmark{
-color:#a8738a; font-size: 16px; margin-left:10px; vertical-align: middle;
+.checkmark {
+	color: #a8738a;
+	font-size: 16px;
+	margin-left: 10px;
+	vertical-align: middle;
 }
 
-.register{max-width: 550px; justify-self: center; top:2px;}
-#register{
-	cursor: pointer; text-align: center;  position:absolute; color:#a8738a; font-weight: 1rem; margin: auto; top: 165px;;
+.register {
+	max-width: 550px;
+	justify-self: center;
+	top: 2px;
 }
-#login{
-	cursor: pointer; text-align: center;  position:absolute; color:#a8738a; font-weight: 1rem; margin: auto;  font-size: 14px;
+
+#register {
+	cursor: pointer;
+	text-align: center;
+	position: absolute;
+	color: #a8738a;
+	font-weight: 1rem;
+	margin: auto;
+	top: 165px;
+	;
 }
-  .filter-item h2 {
-		display: flex;
-		justify-content: space-between;
-		cursor: pointer;
-		padding: 10px;
-		color: rgba(107, 135, 35, 0.5);
-		background-color: rgba(209, 214, 191, 0.089); 
-		transform: 0.3s ease;
-		text-decoration:none;
-		font-size: 18px;
-  }
-  .filter-item h2:hover{
-		color:#a8738a;
-  }
-  h1{
+
+#login {
+	cursor: pointer;
+	text-align: center;
+	position: absolute;
+	color: #a8738a;
+	font-weight: 1rem;
+	margin: auto;
+	font-size: 14px;
+}
+
+.filter-item h2 {
+	display: flex;
+	justify-content: space-between;
+	cursor: pointer;
+	padding: 10px;
+	color: rgba(107, 135, 35, 0.5);
+	background-color: rgba(209, 214, 191, 0.089);
+	transform: 0.3s ease;
+	text-decoration: none;
+	font-size: 18px;
+}
+
+.filter-item h2:hover {
+	color: #a8738a;
+}
+
+h1 {
 	font-size: 26px;
 	color: #a8738a;
 	cursor: pointer;
@@ -240,98 +299,140 @@ color:#a8738a; font-size: 16px; margin-left:10px; vertical-align: middle;
 	text-align: center;
 	width: 70%;
 
-  }
-  #login:hover{ cursor: pointer; font-size: 17px; text-decoration: underline;}
-  #login{top: -15px; font-size: 14px;color:#a8738a; text-decoration: none; transition: 0.3s ease; text-align: center; position:sticky}
+}
 
-
-  .filter-item:hover{
+#login:hover {
 	cursor: pointer;
-	overflow-y:show;
-  }
-  .arrow {
-		display:inline-block;
-		transition: transform 0.3s ease;
-  }
-.rotate{transform: rotate(90deg);}
-  .arrow.open {
-		transform: rotate(90deg); 
-  }
-  form input, form textarea, form button {
-	width: 600px; 
+	font-size: 17px;
+	text-decoration: underline;
+}
+
+#login {
+	top: -15px;
+	font-size: 14px;
+	color: #a8738a;
+	text-decoration: none;
+	transition: 0.3s ease;
+	text-align: center;
+	position: sticky
+}
+
+
+.filter-item:hover {
+	cursor: pointer;
+	overflow-y: show;
+}
+
+.arrow {
+	display: inline-block;
+	transition: transform 0.3s ease;
+}
+
+.rotate {
+	transform: rotate(90deg);
+}
+
+.arrow.open {
+	transform: rotate(90deg);
+}
+
+form input,
+form textarea,
+form button {
+	width: 600px;
 	padding: 10px;
-	margin-bottom: 10px; 
+	margin-bottom: 10px;
 	border: 1px solid #ccc;
 	border-radius: 4px;
-	box-sizing: border-box; 
+	box-sizing: border-box;
 	align-items: center;
-	margin: 2px;
-	display:inline-table;
-	
+	margin-left:120px;
+	display: inline-table;
+	margin-top: 0px;
+
 }
 
 form textarea {
-	resize: vertical; 
+	resize: vertical;
 	height: 80px;
 }
 
-form button {
+form button, #choose-file {
 	background-color: #f1f1f1;
 	border: none;
 	cursor: pointer;
 	padding: 5px;
-	width: 200px;
-	margin:0 auto;
-	display: grid;
-	margin-left: 150px;
-	margin-top: 5px;
-}
+	width: 180px;
+	display: inline-table;
+	margin-top: 10px;}
 
 input[type="file"] {
 	background-color: #f1f1f1;
 	padding: 8px;
 	cursor: pointer;
 }
-form input:focus, form textarea:focus, form button:focus {
+
+form input:focus,
+form textarea:focus,
+form button:focus {
 	outline: none;
-	border-color: #888; 
+	border-color: #888;
 }
+
 .form-container {
-	margin-top: 10px; /* Adjust if needed */
-	transition: all 0.3s ease; /* Smooth transition */
+	margin-top: 10px;
+	/* Adjust if needed */
+	transition: all 0.3s ease;
+	/* Smooth transition */
 	align-items: center;
 }
 
-form#contactForm{width: 75%; align-items: center; cursor: pointer;}
+form#contactForm {
+	width: 75%;
+	align-items: center;
+	cursor: pointer;
+}
+
 #recurringTextarea {
-	display:none;
+	display: none;
 	margin-top: 10px;
 }
-#recurringTextarea1{
+
+#recurringTextarea1, textarea#requestDocument1 {
 	margin-top: 2px;
 	max-width: 70%;
 	cursor: pointer;
+	position: relative;
+	display:block;
+	margin-left: 70px;
 }
+
 input[type="text"],
 input[type="password"],
 input[type="email"],
 input[type="date"],
 input[type="time"],
 input[type="number"],
-input[type="details"]
-textarea,
+input[type],
+input[type="details"] textarea,
 dropdown,
 select {
-   max-width: 70%;
+	max-width: 70%;
 	padding: 10px;
 	margin-top: 2px;
-   margin-bottom: 2px;
+	margin-bottom: 2px;
 	align-items: center;
 	margin-left: 70px;
 	cursor: pointer;
 }
-textarea[type="message"]{max-width: 70%; padding: 10px; margin-top: 2px; align-items: center; margin-left: 70px;
-cursor:pointer;}
+
+textarea[type="message"] {
+	max-width: 70%;
+	padding: 10px;
+	margin-top: 2px;
+	align-items: center;
+	cursor: pointer;
+}
 
 :hover input[type="text"],
 :hover input[type="password"],
@@ -339,40 +440,27 @@ cursor:pointer;}
 :hover input[type="date"],
 :hover input[type="time"],
 :hover input[type="number"],
-:hover input[type="details"]
-:hover textarea,
+:hover input[type="details"]:hover textarea,
 :hover dropdown,
 :hover select {
-	text-decoration:none;
+	text-decoration: none;
 	background-color: none;
-} 
-
-
-section[id=custom-request],
-section[id=partnership],
-section[id=book-session],
-section[id=message]{
-	width: 700px;
-	margin-left: 175px;
-	position:absolute;
-	cursor: pointer;
-	padding:0px;
-
-
 }
 
-
-.icon-label, .iconlabel1, .iconlabel2{
+.icon-label,
+.iconlabel1,
+.iconlabel2 {
 	font-family: 'Nunito', sans-serif;
 	font-weight: bold;
 	cursor: pointer;
 	vertical-align: middle;
 	top: 245px;
 	text-align: center;
-	transition:color 0.3s ease;
+	transition: color 0.3s ease;
 	padding: 5px;
-	margin-top:2%;
+	margin-top: 2%;
 }
+
 .icon-label:hover {
 	color: #a8738a;
 	font-weight: var(icon-label);
@@ -380,24 +468,32 @@ section[id=message]{
 
 .icon-container {
 	margin-top: 100px;
-	display:-webkit-inline-flex;
-	position:absolute;
+	display: -webkit-inline-flex;
+	position: absolute;
 	gap: 20px;
 	justify-content: center;
 	max-width: 700px;
-	
+
 }
-img, p, h1, h2, h3, span {
+
+img,
+p,
+h1,
+h2,
+h3,
+span {
 	margin: 0;
 	padding: 0;
 }
+
 .icon-item {
 	text-align: center;
 	margin: 0;
 	width: 50px;
 	height: auto;
 }
-p#icon-label{
+
+p#icon-label {
 	padding: 0px;
 	display: flex;
 	position: -webkit-sticky;
@@ -405,127 +501,170 @@ p#icon-label{
 	justify-content: center;
 	font-size: 14px;
 }
-.custom-list{
+
+.custom-list {
 	list-style-type: style none;
 	padding-left: 2px;
 	font-size: 12px;
 	text-align: justify;
 	margin-left: 180px;
 }
-.custom-list li{
+
+.custom-list li {
 	list-style-type: none;
-	position:relative;
+	position: relative;
 	padding-left: 10px;
 }
-.custom-list li::before{
-	content:'➤';
-	color:var(--primary-color);
+
+.custom-list li::before {
+	content: '➤';
+	color: var(--primary-color);
 	position: absolute;
 	left: -5px;
 }
 
-.content-paragraph{
+.content-paragraph {
 	font-size: 12px;
 	text-align: justify;
 	max-width: 500px;
-	margin: 0 auto; 
+	margin: 0 auto;
 	word-wrap: normal;
-	justify-content: center; 
+	justify-content: center;
 }
-h2{
+
+h2 {
 	font-size: 13px;
 	color: black;
 	margin-top: -15px;
-	padding:0;
+	padding: 0;
 	margin-bottom: 2px;
 	text-decoration: none;
 	cursor: pointer;
 	text-align: left;
 }
-hr{
+
+hr {
 	max-width: 500px;
 	margin: 0 auto;
 	height: 1px;
 	border: none;
 	background-color: #aaafb2;
 }
-span.bold{
-	color:#a8738a;
+
+span.bold {
+	color: #a8738a;
 	font-weight: bold;
 	font-size: 12px;
 	display: inline;
 
 }
- p#icon-label:hover{
+
+p#icon-label:hover {
 	color: #a8738a;
 	cursor: pointer;
 	text-decoration: underline;
 }
-#dashboard-text:hover{
+
+#dashboard-text:hover {
 	cursor: pointer;
 }
-.filter-section{
+
+.filter-section {
 	vertical-align: center;
-	max-width: 650px; 
+	max-width: 650px;
 	align-self: center;
 	margin: 0 auto;
-	display:inline-block;
+	display: inline-block;
 	flex-direction: column;
 }
-.filter-container{
-	overflow:hidden;
+
+.filter-container {
+	overflow: hidden;
 	transition: height 0.3s ease;
+	margin-left: -50px;
+	display:block;
+	width: 90%;
+	position:relative;
 }
-div.back{
-	color:#aaafb2;
-	text-decoration:none;
-	font-size:18px;
+
+div.back {
+	color: #aaafb2;
+	text-decoration: none;
+	font-size: 18px;
 	background-color: white !important;
 	bottom: 0px;
 	margin-left: 85px;
-	margin-top:-25px;
-	padding:0;
+	margin-top: -25px;
+	padding: 0;
 }
-div.back:hover, div.navbar:hover{
-	text-decoration:underline;
+
+div.back:hover,
+div.navbar:hover {
+	text-decoration: underline;
 	font-size: 19px;
 	color: #a8738a;
 	cursor: pointer;
 }
-div.navbar, div.navbar a{
-	color:#aaafb2;
-	text-decoration:none;
+
+div.navbar,
+div.navbar a {
+	color: #aaafb2;
+	text-decoration: none;
 	font-size: 18px;
 	text-align: right;
 	margin-right: 45px;
 	margin-top: 25px;
-	padding:0;
-	
+	padding: 0;
+
 }
-.toppage:hover{
+
+.toppage:hover {
 	text-decoration: none;
-	color:#a8738a;
+	color: #a8738a;
 	font-weight: bold;
 	font: size 22px;
 	cursor: pointer;
 	transition: 0.1s ease;
 }
-.toppage{
+
+.toppage {
 	position: absolute;
 }
 
-h2{
+h2 {
 	display: block;
 	padding: 0;
 	position: inherit;
 	margin-left: 175px;
 	margin-top: 1px;
-}	
+}
 
-a{ color: inherit; text-decoration: none; cursor: pointer;transform: 0.3s  ease;}
-a:hover{color:var(--primary-color); text-decoration: underline; padding: 2px; transform: 0.3s  ease; }
-div.accessibility, h2#accessibilityHeading, h2#accessibilityHeading1, h2#accessibilityHeading2
-{color:black; text-align: left; margin-left:138px; display: block; padding:0; margin-top: -15px;position:absolute; }
+a {
+	color: inherit;
+	text-decoration: none;
+	cursor: pointer;
+	transform: 0.3s ease;
+}
+
+a:hover {
+	color: var(--primary-color);
+	text-decoration: underline;
+	padding: 2px;
+	transform: 0.3s ease;
+}
+
+div.accessibility,
+h2#accessibilityHeading,
+h2#accessibilityHeading1,
+h2#accessibilityHeading2 {
+	color: black;
+	text-align: left;
+	margin-left: 138px;
+	display: block;
+	padding: 0;
+	margin-top: -15px;
+	position: absolute;
+}
 
 .container {
 	display: flex;
@@ -547,40 +686,54 @@ div.accessibility, h2#accessibilityHeading, h2#accessibilityHeading1, h2#accessi
 .heading.active {
 	color: #a8738a;
 	text-decoration: underline;
-	transform:0.3s ease;
+	transform: 0.3s ease;
 }
 
 .heading:hover {
 	color: #a8738a;
 	transform: 0.3s ease;
 }
-.heading-container p { 
-	position:absolute;
-	display:none;
-	opacity:0;
+
+.heading-container p {
+	position: absolute;
+	display: none;
+	opacity: 0;
 	transition: opacity 0.3s ease, transform 0.3s ease;
 	z-index: 10;
-	padding: 10px;box-shadow: 0px 4px 8px rgba(209, 224, 191, 0.8);
+	padding: 10px;
+	box-shadow: 0px 4px 8px rgba(209, 224, 191, 0.8);
 	background-color: whitesmoke;
 	border-radius: 5%;
 }
-.heading-container.active p{
-	display:block;
-	opacity:1;
+
+.heading-container.active p {
+	display: block;
+	opacity: 1;
 	transform: translateX(0);
+
+}
+section[id=partnership], section[id=book-session], section[id=custom-request], textarea[id=requestDocument1], 
+textarea[id=recurringTextarea1]{
+	display:inline-table;
+	margin-top: -5px;
+	margin-left: 110px;
+	width: 100%;
+	position:relative;
+	
 
 }
 .container p {
 	display: none;
 	text-align: justify;
-	width:100%;
+	width: 100%;
 	margin: 1px auto;
 	cursor: pointer;
-	position:absolute;
+	position: absolute;
 	margin-bottom: 10px;
-	padding: 10px;box-shadow: 0px 4px 8px rgba(209, 224, 191, 0.8);
-	border-radius: 5%;	
-	z-index:10;
+	padding: 10px;
+	box-shadow: 0px 4px 8px rgba(209, 224, 191, 0.8);
+	border-radius: 5%;
+	z-index: 10;
 	opacity: 100;
 	background-color: whitesmoke;
 	transition: opacity 0.3s ease, transform 0.3s ease;
@@ -593,7 +746,8 @@ div.accessibility, h2#accessibilityHeading, h2#accessibilityHeading1, h2#accessi
 	opacity: 1;
 	transform: translateX(0);
 }
-.contact-container{
+
+.contact-container {
 	width: 100%
 }
 
