--- a/src/static/views/reset-password.ejs
+++ b/src/static/views/reset-password.ejs
@@ -4,8 +4,8 @@
       <meta charset="utf-8" />
       <meta http-equiv="X-UA-Compatible" content="IE-edge" />
       <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-      <meta http-equiv="refresh" content="url=https://pdssolutions.web.app">
-      <link rel="stylesheet"  type="text/css" href="/public/app/static/styles.css" />
+      <meta http-equiv="refresh" content="url=https://pdubbssolutions.ca">
+      <link rel="stylesheet"  type="text/css" href="/src\static\styles.css" />
       <title>Forgot Password</title>
       <link rel="preconnect" href="https://fonts.googleapis.com" />
       <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -23,13 +23,21 @@
       </div>
       <button type="submit">Reset Password</button>
    </form>
-<footer><br>
-   <div style="display: inline; margin-top: 0px; text-decoration: none;"  class="auth-buttons"><a href="/public\app\static\pages\login.html">Login</a> | <a href="/public\app\static\pages\register.html">Register</a> | <a href="/public\app\static\pages\contact.html">Contact</a> | <a href="/public\app\static\pages\cart.html">Cart</a></div><br>
-   <div class="ref-buttons">
-       <a style="font-size: 12px; text-decoration: none; color:#aaafb2;" href="termsandconditions.html">Terms and Conditions</a> |
-       <a style="font-size: 12px; text-decoration: none; color:#aaafb2;" href="accessibility.html">Accessibility</a> |
-       <a style="font-size: 12px; text-decoration: none; color:#aaafb2;" href="sources">Sources</a>
-   </div>
-</footer>
+   <footer style="margin-top: 5px;">
+      <div style="display: inline; margin-top: 0px; text-decoration: none;"  class="auth-buttons"><a href="/src/static/pages/login.html">Login</a> | <a href="/src/static/pages/register.html">Register</a> | <a href="/src/static/pages/contact.html">Contact</a> | <a href="/src/static/pages/cart.html">Cart</a></div>
+      <br>
+      <div class="ref-buttons">
+         <a style="font-size: 12px; text-decoration: none; color:#aaafb2;" href="termsandconditions.html">Terms and Conditions</a> |
+         <a style="font-size: 12px; text-decoration: none; color:#aaafb2;" href="accessibility.html">Accessibility</a> |
+         <a style="font-size: 12px; text-decoration: none; color:#aaafb2;" href="sources.html">Sources</a>
+         | <a style="font-size:12px; text-decoration:none; color:#aaafb2;" href="/src/static/pages/csspolicy.html">Policies</a> | <a style="font-size:12px; text-decoration:none; color:#aaafb2;" href="/src/static/pages/cssprocedure.html"> Procedures</a>
+      </div>
+      <span style="display:inline; margin-top: 20px;" >Pdubbs Solutions |  Administrative &amp; Project Management Services</span><br>
+      <div style="position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%); color: white; text-align: center;"></div>
+      <img style=" justify-content:center; max-width: 100px; padding: 0; max-height: 100px; left: 340px;margin-top: -20px; cursor: pointer;  z-index: -999; vertical-align: middle;  position:absolute;" src="/src/static/images/Pdubbs-Logo.jpg" alt="logo" class="logo" id="footer-logo" onclick="goHome()" />
+   </footer>
+   <script type="text/javascript" src="/src/index.mjs"></script>
+   <script type="text/javascript" src="/src/app.js"></script>
+   <script type="text/javascript" src="/src/static/pages/js\express.js"></script>
 </body>
 </html>
